# programming-basics

programming-basics/lab1/: CMakeLists.txt  README.md
programming-basics/lab1/e1-check-bits-5-11/: main.c
programming-basics/lab1/e2-output-string-float-from-int/: main.c
programming-basics/lab1/e3-calculator/: main.c
programming-basics/lab1/e4-min-max/: main.c
programming-basics/lab1/e5-is-big-letter/: main.c
programming-basics/lab1/e6-more-positive-or-negative/: main.c
programming-basics/lab2/e1-random-until-6/: main.c
programming-basics/lab2/e2-ascii-print/: main.c
programming-basics/lab2/e3-sum/: main.c
programming-basics/lab2/e4-border/: main.c
programming-basics/lab2/e5-multiplication-table/: main.c
programming-basics/lab3/: CMakeLists.txt  e1-dec2bin.c  e2-logical-calc.c  e3-power.c  power.h
